--- a/scripts/gp_post_approx_paper/test_1d_visualization.Rmd
+++ b/scripts/gp_post_approx_paper/test_1d_visualization.Rmd
@@ -43,6 +43,14 @@ ylim <- c(0.0777, 0.4)
 N_mcmc <- 50000
 burn_in_start <- N_mcmc/2
 
+# Basic trapezoidal rule for numerical integration, for approximating normalizing constants. 
+int_trap <- function(x, dx) {
+  x <- drop(x)
+  n_pts <- length(x)
+
+  return(0.5 * dx * (x[1] + x[n_pts]) +  dx * sum(x[2:(n_pts-1)]))
+}
+
 ```
 
 
@@ -84,7 +92,6 @@ test_info <- list(input=u_grid)
 test_info$fwd <- llik_exact$run_fwd_model(test_info$input)[1,] # TODO: don't need this indexing once I update the llikEmulator class. 
 test_info$llik <- llik_exact$assemble_llik(test_info$input)
 test_info$lprior <- calc_lprior_theta(test_info$input, inv_prob$par_prior)
-test_info$lpost <- test_info$llik + test_info$lprior
 
 # Plot true unnormalized posterior density. 
 plot(test_info$input, test_info$fwd, type="l", 
@@ -111,7 +118,6 @@ design_info$input <- get_batch_design("LHS", N_design, prior_params=inv_prob$par
 design_info$fwd <- llik_exact$run_fwd_model(design_info$input)[1,]
 design_info$llik <- llik_exact$assemble_llik(design_info$input)
 design_info$lprior <- calc_lprior_theta(design_info$input, inv_prob$par_prior)
-design_info$lpost <- design_info$llik + design_info$lprior
 
 # Log-likelihood emulator. 
 em_llik_gp <- gpWrapperHet(design_info$input, matrix(design_info$llik, ncol=1), normalize_output=TRUE, scale_input=TRUE)
@@ -147,21 +153,13 @@ plt_gp_dist_llik <- em_llik$emulator_model$plot_pred_1d(test_info$input, include
                                                         pred_list=emulator_pred_llik, ylab="L(u)",
                                                         Y_new=matrix(test_info$llik, ncol=1), line_thickness=line_thickness,
                                                         design_color=design_color, design_pt_size=design_pt_size, 
-                                                        plot_title="GP predictions [llik]")[[1]] %>% 
-                                                        ggformat_journal(xlim=xlim, ylim=ylim)
+                                                        plot_title="GP predictions [llik]")[[1]]
 plt_gp_dist_fwd <- em_fwd$emulator_model$plot_pred_1d(test_info$input, include_interval=TRUE,
                                                       interval_method="pm_std_dev", N_std_dev=N_std_dev,
                                                       pred_list=emulator_pred_fwd, ylab="G(u)",
                                                       Y_new=matrix(test_info$fwd, ncol=1), line_thickness=line_thickness,
                                                       design_color=design_color, design_pt_size=design_pt_size, 
-                                                      plot_title="GP predictions [fwd]")[[1]] %>% 
-                                                      ggformat_journal(xlim=xlim, ylim=ylim)
-
-plot(plt_gp_dist_llik)
-plot(plt_gp_dist_fwd)
-ggsave(file.path(output_dir, "gp_dist_llikem.png"), plt_gp_dist_llik)
-ggsave(file.path(output_dir, "gp_dist_fwdem.png"), plt_gp_dist_fwd)
-
+                                                      plot_title="GP predictions [fwd]")[[1]]
 
 # (2): Plot the log-likelihood emulator predictive distributions. 
 plt_llik_dist_llik <- em_llik$plot_pred_1d(test_info$input, emulator_pred_list=emulator_pred_llik,
@@ -169,21 +167,13 @@ plt_llik_dist_llik <- em_llik$plot_pred_1d(test_info$input, emulator_pred_list=e
                                            interval_method="pm_std_dev", N_std_dev=N_std_dev,
                                            true_llik=test_info$llik, CI_prob=CI_prob, line_thickness=line_thickness,
                                            design_color=design_color, design_pt_size=design_pt_size,
-                                           plot_title="log-likelihood predictions [llik]", ylab="L(u)") %>% 
-                                           ggformat_journal(xlim=xlim, ylim=ylim)
+                                           plot_title="log-likelihood predictions [llik]", ylab="L(u)")
 plt_llik_dist_fwd <- em_fwd$plot_pred_1d(test_info$input, emulator_pred_list=emulator_pred_fwd,
                                          plot_type="llik", include_interval=TRUE,  
                                          interval_method="pm_std_dev", N_std_dev=N_std_dev,
                                          true_llik=test_info$llik, CI_prob=CI_prob, ylab="L(u)",
                                          design_color=design_color, design_pt_size=design_pt_size,
-                                         plot_title="log-likelihood predictions [fwd]") %>%
-                                         ggformat_journal(xlim=xlim, ylim=ylim)
-
-plot(plt_llik_dist_llik)
-plot(plt_llik_dist_fwd)
-ggsave(file.path(output_dir, "llik_dist_llikem.png"), plt_llik_dist_llik)
-ggsave(file.path(output_dir, "llik_dist_fwdem.png"), plt_llik_dist_fwd)
-
+                                         plot_title="log-likelihood predictions [fwd]")
 
 # (3): Plot the likelihood emulator predictive distributions. 
 plt_lik_dist_llik <- em_llik$plot_pred_1d(test_info$input, emulator_pred_list=emulator_pred_llik,
@@ -191,57 +181,97 @@ plt_lik_dist_llik <- em_llik$plot_pred_1d(test_info$input, emulator_pred_list=em
                                           interval_method="pm_std_dev", N_std_dev=N_std_dev,
                                           true_llik=test_info$llik, CI_prob=CI_prob, line_thickness=line_thickness,
                                           design_color=design_color, design_pt_size=design_pt_size, ylab="exp L(u)",
-                                          plot_title="likelihood predictions [llik]") %>%
-                                          ggformat_journal(xlim=xlim, ylim=ylim)
+                                          plot_title="likelihood predictions [llik]")
+
 # TODO: why doesnt this throw an error when using "CI"?
 plt_lik_dist_fwd <- em_fwd$plot_pred_1d(test_info$input, emulator_pred_list=emulator_pred_fwd, 
                                         plot_type="lik", include_interval=TRUE, 
                                         interval_method="pm_std_dev", N_std_dev=N_std_dev,
                                         true_llik=test_info$llik, CI_prob=CI_prob, line_thickness=line_thickness,
                                         design_color=design_color, design_pt_size=design_pt_size, ylab="exp L(u)",
-                                        plot_title="likelihood predictions [fwd]") %>% 
-                                        ggformat_journal(xlim=xlim, ylim=ylim)
+                                        plot_title="likelihood predictions [fwd]")
 
+#
+# Plot formatting and saving. 
+# 
+
+# Align axes: log-likelihood. 
+lims_llik <- get_common_lims(plt_gp_dist_llik, plt_llik_dist_llik, plt_llik_dist_fwd)
+
+# Align axes: likelihood. 
+lims_lik <- get_common_lims(plt_lik_dist_llik, plt_lik_dist_fwd)
+
+# GP Emulator plots. 
+plt_gp_dist_llik <- ggformat_journal(plt_gp_dist_llik, xlim=lims_llik$xlim, ylim=lims_llik$ylim)
+plt_gp_dist_fwd <- ggformat_journal(plt_gp_dist_fwd, xlim=lims_llik$xlim)
+plot(plt_gp_dist_llik)
+plot(plt_gp_dist_fwd)
+ggsave(file.path(output_dir, "gp_dist_llikem.png"), plt_gp_dist_llik)
+ggsave(file.path(output_dir, "gp_dist_fwdem.png"), plt_gp_dist_fwd)
+
+# Log-likelihood plots. 
+plt_llik_dist_llik <- ggformat_journal(plt_llik_dist_llik, xlim=lims_llik$xlim, ylim=lims_llik$ylim)
+plt_llik_dist_fwd <- ggformat_journal(plt_llik_dist_fwd, xlim=lims_llik$xlim, ylim=lims_llik$ylim)
+plot(plt_llik_dist_llik)
+plot(plt_llik_dist_fwd)
+ggsave(file.path(output_dir, "llik_dist_llikem.png"), plt_llik_dist_llik)
+ggsave(file.path(output_dir, "llik_dist_fwdem.png"), plt_llik_dist_fwd)
+
+# Likelihood plots. 
+plt_lik_dist_llik <- ggformat_journal(plt_lik_dist_llik, xlim=lims_lik$xlim, ylim=lims_lik$ylim)
+plt_lik_dist_fwd <- ggformat_journal(plt_lik_dist_fwd, xlim=lims_lik$xlim, ylim=lims_lik$ylim)
 plot(plt_lik_dist_llik)
 plot(plt_lik_dist_fwd)
 ggsave(file.path(output_dir, "lik_dist_llikem.png"), plt_lik_dist_llik)
 ggsave(file.path(output_dir, "lik_dist_fwdem.png"), plt_lik_dist_fwd)
+
 ```
+```{r}
+#
+# Compute (approximately) normalized exact posterior. 
+#
+
+dx <- abs(test_info$input[2] - test_info$input[1])
+norm_cst_exact <- int_trap(exp(test_info$llik + test_info$lprior), dx)
+test_info$post <- exp(test_info$llik + test_info$lprior) / norm_cst_exact
+design_info$post <- exp(design_info$llik + design_info$lprior) / norm_cst_exact
+
+```
+
+
 
 ```{r}
 #
 # Comparison of different posterior approximations. 
 #
 
-# Constant to scale likelihoods by to produce posterior apoproximations. 
-dx <- test_info$input[2,] - test_info$input[1,]
-norm_cst <- 0.5 * dx * (exp(test_info$llik[1]) + exp(test_info$llik[N_grid])) + 
-                  dx * sum(exp(test_info$llik)[2:(N_grid-1)])
-prior_dens <- exp(calc_lprior_theta(test_info$input[1,], inv_prob$par_prior))
-scale_cst <- prior_dens / norm_cst
-
+# Convenience function for normalization. 
+normalize_lik <- function(lik, dx) {
+  lik * exp(test_info$lprior)  / int_trap(lik * exp(test_info$lprior), dx)
+}
 
 # Log-likelihood emulation. 
 lik_approx_llik <- em_llik$calc_lik_approx_comparison(test_info$input, approx_types=c("mean", "marginal"), 
-                                                      emulator_pred_list=emulator_pred_llik) * scale_cst
-lik_approx_llik_plt <- plot_curves_1d_helper(test_info$input, lik_approx_llik, y_new=exp(test_info$llik)*scale_cst,
-                                             X_design=design_info$input, y_design=exp(design_info$llik)*scale_cst,
-                                             plot_title="Likelihood Approximations [llik]",
+                                                      emulator_pred_list=emulator_pred_llik)
+lik_approx_llik <- apply(lik_approx_llik, 2, function(x) normalize_lik(x, dx))
+lik_approx_llik_plt <- plot_curves_1d_helper(test_info$input, lik_approx_llik, y_new=test_info$post,
+                                             X_design=design_info$input, y_design=design_info$post,
+                                             plot_title="Posterior Approximations [llik]",
                                              line_thickness=line_thickness, design_color=design_color,
-                                             design_pt_size=design_pt_size, xlab="u",  ylab="exp L(u)") %>%
-                                             ggformat_journal(legend_position="none", xlim=xlim, ylim=ylim*scale_cst)
+                                             design_pt_size=design_pt_size, xlab="u",  ylab="pi(u)") %>%
+                                             ggformat_journal(legend_position="none")
 plot(lik_approx_llik_plt)
 
 # Forward model emulation. 
 lik_approx_fwd <- em_fwd$calc_lik_approx_comparison(test_info$input, approx_types=c("mean", "marginal"), 
                                                     emulator_pred_list=emulator_pred_fwd)
-lik_approx_fwd_plt <- plot_curves_1d_helper(test_info$input, lik_approx_fwd, y_new=exp(test_info$llik),
-                                            X_design=design_info$input, y_design=exp(design_info$llik),
+lik_approx_fwd <- apply(lik_approx_fwd, 2, function(x) normalize(x, dx))
+lik_approx_fwd_plt <- plot_curves_1d_helper(test_info$input, lik_approx_fwd, y_new=test_info$post,
+                                            X_design=design_info$input, y_design=design_info$post,
                                             plot_title="Likelihood Approximations [fwd]",
                                             line_thickness=line_thickness, design_color=design_color,
                                             design_pt_size=design_pt_size, xlab="u", 
-                                            ylab="exp L(u)") %>% ggformat_journal(legend_position="none", 
-                                                                                  xlim=xlim, ylim=ylim)
+                                            ylab="exp L(u)") %>% ggformat_journal(legend_position="none")
 plot(lik_approx_fwd_plt)
 ```
 ```{r}
@@ -256,7 +286,7 @@ mcmc_par_init <- sample_prior_theta(inv_prob$par_prior)
 
 # MCWMH-Ind. 
 mcmh_nocov_llik_list <- mcmc_gp_noisy(em_llik, inv_prob$par_prior, N_itr=N_mcmc, mode="MCMH", 
-                                 use_gp_cov=FALSE, par_init=mcmc_par_init)
+                                      use_gp_cov=FALSE, par_init=mcmc_par_init)
 samp_dt <- format_mcmc_output(mcmh_nocov_llik_list, test_label="nocov-llik")
 
 # MCWMH-Joint. 
@@ -308,25 +338,13 @@ lik_approx_llik <- cbind(lik_approx_llik, `mcwmh-joint`=dkde1d(test_info$input, 
 #
 
 # Log-likelihood emulator. 
-lik_approx_llik_plt <- plot_curves_1d_helper(test_info$input, lik_approx_llik, y_new=exp(test_info$llik)*scale_cst,
-                                             X_design=design_info$input, y_design=exp(design_info$llik)*scale_cst,
-                                             plot_title="Likelihood Approximations [llik]",
+lik_approx_llik_plt <- plot_curves_1d_helper(test_info$input, lik_approx_llik, y_new=test_info$post,
+                                             X_design=design_info$input, y_design=design_info$post,
+                                             plot_title="Posterior Approximations [llik]",
                                              line_thickness=line_thickness, design_color=design_color,
-                                             design_pt_size=design_pt_size, xlab="u",  ylab="exp L(u)") %>%
-                                             ggformat_journal(legend_position="none", xlim=xlim, ylim=ylim*scale_cst)
+                                             design_pt_size=design_pt_size, xlab="u",  ylab="pi(u)") %>%
+                                             ggformat_journal(legend_position="none")
 plot(lik_approx_llik_plt)
-
-
-lik_approx_llik_plt <- plot_curves_1d_helper(test_info$input, lik_approx_llik[,2:4], y_new=exp(test_info$llik),
-                                             X_design=design_info$input, y_design=exp(design_info$llik),
-                                             plot_title="Likelihood Approximations [llik]",
-                                             line_thickness=line_thickness, design_color=design_color,
-                                             design_pt_size=design_pt_size, xlab="u",  ylab="exp L(u)") %>%
-                                             ggformat_journal(legend_position="none", xlim=xlim, ylim=ylim)
-plot(lik_approx_llik_plt)
-
-# TODO: need to normalize differently for each approximation. 
-
 
 
 ```
