--- a/math/calibrating_ecosystem_models.tex
+++ b/math/calibrating_ecosystem_models.tex
@@ -54,7 +54,11 @@
 % The Structure of Land Surface Models
 \section{The Structure of Land Surface Models}
 Unlike the typical PDE models used in atmospheric and oceanic modeling, the standard toolkit in land surface modeling 
-consists primarily of ODEs describing time evolution at a single location. While LSMs can incorporate a wide 
+consists primarily of ODEs describing time evolution at a single location. In this introductory section, we omit discussion 
+of the application of these models across space, but return to this important topic in a later section. The notation 
+used throughout this section can thus be thought of as suppressing a fixed spatial index on most of the quantities considered. 
+
+While LSMs can incorporate a wide 
 variety of terrestrial processes, we will focus on models of the carbon cycle when providing concrete examples. 
 LSMs model the carbon cycle as consisting of a set of states (i.e., \textit{pools}; soil, roots, above-ground vegetation, atmosphere, etc.),
 along with processes that transfer carbon between these states (i.e., \textit{fluxes}; photosynthesis, respiration, etc.). 
@@ -66,14 +70,48 @@ Carbon fluxes between these states are then described by an ODE model of the for
 \begin{align}
 &\frac{d}{d\Time} \state_{\Par}(\Time) = \funcODE_{\Par}(\state_{\Par}(\Time), \forcing(\Time)), &&\state_{\Par}(\timeInit) = \stateInit, 
 \end{align}
-where $\funcODE(\cdot, \forcing): \R^{\dimState} \to \R^{\dimState}$ is typically a nonlinear function, and $\stateInit$ is the \textit{initial condition}, 
+where $\funcODE_{\Par}(\cdot, \forcing): \R^{\dimState} \to \R^{\dimState}$ is typically a nonlinear function, and $\stateInit$ is the \textit{initial condition}, 
 the value of the state at some initial time $\timeInit$. The forward dynamics encoded by $\funcODE_{\Par}$ are dependent both on a set of 
 \textit{parameters} $\Par \in \parSpace \subset \R^{\dimPar}$, as well as a \textit{forcing} (or \textit{driving}) function $\forcing(\Time)$.
-In practice, $\forcing(\Time)$ is typically given by a sequence of (noisy) observations of meteorological variables (e.g., photosynthetically-active 
-radiation). In general, the parameters $\Par$ are not physical constants; rather, they provide a means to empirically parameterize ecosystem 
+In general, the parameters $\Par$ are not physical constants; rather, they provide a means to empirically parameterize ecosystem 
 processes, which may vary in space and time.   
 We emphasize that the solution $\state_{\Par}(\Time)$ of the ODE is a function of the parameters $\Par$, driver $\forcing(\Time)$, and 
-initial condition $\stateInit$, though only the first is made explicit in the notation since the parameters are the main point of interest in this document.
+initial condition $\stateInit$, though only the first is made explicit in the notation as the parameters are the main quantity of interest in this document.
+
+% The Forward Problem 
+\subsection{The Forward Problem}
+The \textit{forward problem} consists of recovering the solution $\state_{\Par}(\Time)$ over some time interval $[\timeInit, \timeEnd]$ for given 
+values of $\Par$, $\stateInit$, and $\forcing(\cdot)$. Given the nonlinearity of $\funcODE_{\Par}$, this solution is typically approximated 
+numerically at a finite set of times $\{\indexTime{\Time}\}_{\timeIdx=0}^{\lastTimeIdx} \subset [\timeInit, \timeEnd]$. We 
+let $\stateApprox_{\Par}(\indexTime{\Time})$ denote the approximation of $\state_{\Par}(\indexTime{\Time})$ for each 
+$\timeIdx = 0, \dots, \lastTimeIdx$. Also, let $\indexTime{\timeStep} \Def \indexTime[\timeIdx+1]{\Time} - \indexTime{\Time}$ denote the 
+time step used by the numerical solver at the $\timeIdx^{\text{th}}$ iteration. Standard ODE solvers are time-stepping algorithms of the 
+form 
+\begin{align}
+&\stateApprox_{\Par}(\indexTime[\timeIdx+1]{\Time}) \Def \fwdOne_{\Par}(\stateApprox_{\Par}(\indexTime{\Time}), \forcing(\indexTime{\Time}); \indexTime{\timeStep}), 
+&&\stateApprox_{\Par}(\indexTime[0]{\Time}) = \stateInit, \label{ode_discrete}
+\end{align}
+for $\timeIdx = 1, \dots, \lastTimeIdx$. Setting a constant step size $\timeStep \equiv \indexTime{\timeStep}$ is a common choice, though 
+algorithms that adapt the step size are also quite standard. In practice, the model drivers $\forcing(\indexTime{\Time})$
+are typically given by a sequence of (noisy) observations of meteorological variables (e.g., photosynthetically-active radiation).
+Going forward, we will treat the discrete dynamical system \ref{ode_discrete} as 
+the true model and starting point for subsequent analysis, thus neglecting discretization error with respect to the true continuous-time solution. 
+
+% The Inverse Problem
+\subsection{The Inverse Problem}
+As noted above, the forward solution of the ODE depends on the chosen value of the parameters $\Par$. In the LSM context, the values 
+of these parameters are not known, and moreover, cannot always be observed directly. In other words, offline estimation of $\Par$
+using a separate dataset is typically not possible for all of the parameters of interest. Historically, the choice of parameter settings 
+was commonly performed on an ad hoc basis using expert judgement; simulating the models parameterized in this way is often 
+referred to as performing ``free runs.'' 
+
+Given that $\Par$ consists of empirical parameters 
+(not physical constants) the concept of ``true'' parameter values is largely ill-defined. It is perhaps most conceptually useful to draw an 
+analogy with empirically-determined parameters of a statistical model, in which ``true values'' implies best-fit in a regression sense. 
+
+
+
+
 
 \end{document} 
 
